<resources>
    <string name="app_name">Movies</string>
    <string name="font_family">arial</string>
    <string name="card_movie_title">Título</string>
    <string name="card_movie_date">Fecha</string>
    <string name="rate">Valoración</string>
    <string name="vote">Votos</string>
    <string name="language">Idioma</string>
    <string name="plot">Argumento</string>
    <string name="filter">Filtro</string>
    <string name="card_movie_button_detail">DETALLES</string>
    <string name="error_text_load_data">Error al cargar datos servidor</string>
    <string name="error_button_retry">Reintentar</string>

    <string-array name="lstSpinner">
        <item>Todas las peliculas</item>
        <item>Mejor Valoradas</item>
        <item>Mas Votadas</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_nav_all">Todas</string>
    <string name="menu_nav_rate">Puntuación</string>
    <string name="menu_nav_vote">Favoritas</string>

</resources>