<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_movie"
        app:cardElevation="@dimen/card_movie_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_movie_radius"
        android:layout_margin="@dimen/row_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_movie_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_movie_image"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/card_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/card_movie_margin"
                android:textStyle="bold"
                android:text="@string/card_movie_title"
                android:textSize="@dimen/card_movie_title"
                android:textColor="@color/card_movie_text_color"/>
            <TextView
                android:id="@+id/card_movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family"
                android:gravity="center"
                android:layout_marginLeft="@dimen/card_movie_margin"
                android:text="@string/card_movie_date"
                android:textSize="@dimen/card_movie_date"
                android:textColor="@color/card_movie_text_color"/>
            <TextView
                android:id="@+id/card_movie_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family"
                android:gravity="center"
                android:layout_marginTop="@dimen/card_movie_margin"
                android:layout_marginLeft="@dimen/card_movie_margin"
                android:text="@string/rate"
                android:textSize="@dimen/card_movie_rate"
                android:textColor="@color/card_movie_text_color" />
            <TextView
                android:id="@+id/card_movie_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family"
                android:gravity="center"
                android:paddingBottom="@dimen/card_movie_margin"
                android:text="@string/vote"
                android:textSize="15dp"
                android:layout_marginLeft="@dimen/card_movie_margin"
                android:textColor="@color/card_movie_text_color" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>