<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"

    android:background="@color/recyclerview_background"
    tools:context=".movies.lstMovies.view.LstMoviesActivity">

    <!--FRAMELAYOUT-->
    <FrameLayout
        android:id="@+id/activity_lst_movies_fragment_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <!--NAVIGATION-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/activity_lst_movies_bottom_navigation"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="auto"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <!--LAYOUT ERROR-->
    <LinearLayout
        android:id="@+id/activity_lst_movies_error_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_text_load_data"
            android:gravity="center"
            android:textSize="@dimen/card_movie_title"
            android:fontFamily="@string/font_family"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_button_retry"
            android:layout_marginTop="8dp"/>


    </LinearLayout>

    <!--LOADING PROGRESSBAR-->
    <ProgressBar
        android:id="@+id/activity_lst_movies_loading_progressBar"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"/>

</RelativeLayout>
